test/error/dir1/badreturn3.luau
return -- script could be empty
